# mcp-client-ref

./: .gitignore  README.md  mcp_config.example.json  pyproject.toml
scripts/: client.py  server_fortune.py  server_simple.py
src/mcp_client_ref/: __init__.py
